--- a/client/package.json
+++ b/client/package.json
@@ -16,13 +16,13 @@
     "@material-ui/icons": "^4.11.2",
     "@walletconnect/web3-provider": "^1.3.6",
     "axios": "^0.21.1",
-    "ethers": "^5.1.4",
     "form-data": "^4.0.0",
     "next": "^10.0.6",
     "react": "^17.0.1",
     "react-blockies": "^1.4.1",
     "react-dom": "^17.0.1",
     "react-toastify": "^7.0.3",
+    "url-loader": "^4.1.1",
     "web3": "^1.3.4",
     "web3modal": "^1.9.3"
   }
